--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "Tukiko"
-  "description": "For Heroku 24/7"
-  "main": "bot.js"
+  "name": "Tukiko",
+  "description": "For Heroku 24/7",
+  "version": "1.0.0",
+  "main": "bot.js",
   "token": "MzgzNDM0MzM1MTc4NDU3MDk4.DPorBg.OaLt_UGaMbldGfJ3o15hsEgILvU",
   "prefix": "="
 }
