--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
   "description": "For Heroku 24/7",
   "version": "1.0.0",
   "main": "bot.js",
-  "prefix": "="
+  "prefix": "=",
+  "scripts": {
+    "start": "node bot.js"
+  },
+  "dependencies": {
+    "discord.js": "11.1.0",
 }
