--- a/package.json
+++ b/package.json
@@ -1,3 +1,12 @@
 {
-  "prefix": "=",
+  "name": "Tukiko",
+  "description": "For Heroku 24/7",
+  "version": "1.0.0",
+  "main": "bot.js",
+  "scripts": {
+    "start": "node bot.js"
+  },
+  "dependencies": {
+   "discord.js": "11.1.0"
+  }
 }
